# screenrtc

./: LICENSE  README.md  install.sh  pyproject.toml
src/webrtc_stream/: cli.py  config.py  encoders.py  pipeline.py  portal.py  server.py  tui.py
static/: index.html
