[project]
name = "webrtc-stream"
version = "0.1.0"
description = "WebRTC screen streamer — HW H.264 (NVENC / VA-API / x264), Wayland/PipeWire, <100 ms latency"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "textual>=8.2.3",
]

[project.scripts]
stream = "webrtc_stream.cli:main"
stream-tui = "webrtc_stream.tui:main"

[tool.uv]
python-preference = "system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webrtc_stream"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["webrtc_stream"]
